--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express-jwt": "^5.3.1",
     "express-validator": "^5.3.1",
     "formidable": "^1.2.2",
+    "helmet": "^7.0.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.19",
     "mongodb": "^3.5.9",
