--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "config": "^3.3.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "csrf": "^3.1.0",
+    "csrf-csrf": "^3.0.1",
     "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
